@@ -1,6 +1,9 @@
 Revision history for Dist-Zilla-Plugin-DynamicPrereqs
 
 {{$NEXT}}
+          - added new helper subs: requires, runtime_requires,
+            build_requires, and test_requires, as sugar for updating prereqs
+            in Makefile.PL
 
 0.015     2015-08-21 23:49:23Z
           - has_module($module) now returns the $VERSION of the installed
